# Airqualitysensor

./: CMakeLists.txt  main.cpp  pointer.cpp
lib/: CMakeLists.txt
lib/BME280/: BME280.cpp  BME280.h  CMakeLists.txt
lib/LMP91/: CMakeLists.txt  LMP91.cpp  LMP91.h  LMP91_regs.h
lib/LoRa/: CMakeLists.txt  LoRa.h
lib/MCP3564R/: CMakeLists.txt  MCP3564R.cpp  MCP3564R.h  MCP3564R_regs.h
lib/NO2/: CMakeLists.txt
lib/RFM95W/: CMakeLists.txt  RFM95W.cpp  RFM95W.h  RFM95W_regs.h
lib/SCD30/: CMakeLists.txt  SCD30.cpp  SCD30.h
lib/SEN55/: CMakeLists.txt  SEN55.cpp  SEN55.h
lib/SevSeg/: CMakeLists.txt  SevSeg.cpp  SevSeg.h
